fix: fixes footer__social-media overflow

--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -6,8 +6,6 @@
   height: 48px;
   border: 3px solid rgba(40, 54, 69, 0.1);
   border-radius: 50%;
-  box-sizing: border-box;
-  position: relative;
   transition: all 1.0s ease-in;
   opacity: 1;
 }
